# Thesis_DJI_PI

./: CMakeLists.txt  README.md  UserConfig.txt  main.cpp  readme
Contrl_Fusion/: main.cpp
Libraries/osdk-core/: CMakeLists.txt
Libraries/osdk-core/cmake-modules/DownloadProject/: DownloadProject.cmake
Libraries/osdk-core/platform/linux/src/: posix_thread.cpp
Onboard-SDK-3.5/: CMakeLists.txt
Onboard-SDK-3.5/osdk-core/api/inc/: dji_control.hpp
Onboard-SDK-3.5/osdk-core/api/src/: dji_control.cpp
Onboard-SDK-3.5/sample/STM32/OnBoardSDK_STM32/User/: FlightControlSample.cpp  FlightControlSample.h
Onboard-SDK-3.5/sample/linux/common/: dji_linux_environment.cpp
Onboard-SDK-3.5/sample/linux/flight-control/: CMakeLists.txt  flight_control_sample.hpp
Onboard-SDK-3.5/sample/linux/logging/: CMakeLists.txt
Onboard-SDK-3.5/sample/linux/mobile/: CMakeLists.txt
SampleTest/: CMakeLists.txt
SampleTest/Contrl_Fusion/: CTRLFusion.cpp  CTRLFusion.h
SampleTest/osdk-core/: CMakeLists.txt
SampleTest/osdk-core/cmake-modules/: DJIOSDKConfig.cmake
SampleTest/samples/: CMakeLists.txt
SampleTest/samples/advanced-sensing/: CMakeLists.txt
SampleTest/samples/camera-gimbal/: CMakeLists.txt
SampleTest/samples/missions/: CMakeLists.txt
SampleTest/samples/telemetry/: CMakeLists.txt
TestCode/: CMakeLists.txt
TestCode/TelemetryControlTest/: CMakeLists.txt  TelemetryControlTest.cpp  TelemetryControlTest.h  TelemetryControlTest.hpp  main.cpp
TestCode/common/: dji_linux_helpers.cpp
TestCode/common/src/: CMakeLists.txt
TestCode/common/src/cmake/: lcmtypes.cmake
TestCode/common/src/examples/: logger_example.cpp
TestCode/common/src/lcmtypes/c/lcmtypes/: acel_lcm_msgs.h
TestCode/common/src/lcmtypes/cpp/lcmtypes/acel_lcm_msgs/: example_t.hpp
TestCode/common/src/lcmtypes/python/acel_lcm_msgs/: example_t.py
TestCode/common/src/libraries/ascent/: CMakeLists.txt  README.md
TestCode/common/src/libraries/ascent/ascent/: Ascent.h  ChaiEngine.h  Param.h  ParamV.h  System.h
TestCode/common/src/libraries/ascent/ascent/integrators/: Midpoint.h  RK4.h  RKMM.h  RTAM4.h
TestCode/common/src/libraries/ascent/ascent/timing/: Sampler.h
TestCode/common/src/libraries/ascent/examples/airy/: CMakeLists.txt
TestCode/common/src/libraries/ascent/examples/lorenz/: CMakeLists.txt
TestCode/common/src/libraries/ascent/examples/sampling/: CMakeLists.txt  sampling.cpp
TestCode/common/src/libraries/googletest/: CMakeLists.txt
TestCode/common/src/libraries/googletest/googlemock/test/: gmock_test_utils.py
TestCode/common/src/libraries/spdlog/: CMakeLists.txt
TestCode/common/src/libraries/spdlog/spdlog/details/: async_log_helper.h  async_logger_impl.h  file_helper.h  log_msg.h  pattern_formatter_impl.h  registry.h  spdlog_impl.h
TestCode/common/src/utilities/: CMakeLists.txt
TestCode/examples/: CMakeLists.txt  logger_example.cpp
TestCode/flight-controlOSDK/: CMakeLists.txt  flight_control_sampleOSDK.cpp  main.cpp
TestCode/loggingOSDK/: CMakeLists.txt  logging_sampleOSDK.cpp  main.cpp
TestCode/telemetryOSDK/: CMakeLists.txt  main.cpp  telemetry_sampleOSDK.cpp
acel-base-master/src/: CMakeLists.txt
acel-base-master/src/libraries/ascent/ascent/: Recorder.h  Utility.h
acel-base-master/src/libraries/ascent/ascent/algorithms/: Derivative.h
acel-base-master/src/libraries/ascent/ascent/integrators/: DOPRI45.h  Euler.h  RK2.h
acel-base-master/src/libraries/ascent/ascent/timing/: TimeAdvanced.h
acel-base-master/src/libraries/ascent/examples/: CMakeLists.txt
acel-base-master/src/libraries/ascent/examples/modular-spring-damper/: CMakeLists.txt
acel-base-master/src/utilities/logging/: logger.cpp  logger.hpp
common/: README.md
djilog/: global_csv_djilog.20180418161447.data  global_csv_djilog.20180418161918.data
samples/: CMakeLists.txt
